# morse

./: .gitignore  README.md  pyproject.toml
src/morse/: __init__.py  _data.py  _decode.py  _encode.py  _errors.py  _timing.py
tests/: conftest.py  test_api_surface.py  test_data.py  test_decode.py  test_encode.py  test_errors.py  test_roundtrip.py  test_timing.py
