[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morse"
version = "0.1.0"
description = "International Morse Code encoder/decoder with prosigns and Farnsworth timing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["morse", "morse-code", "cw", "ham-radio", "telegraphy", "farnsworth", "prosigns"]
authors = [
    { name = "nripankadas07" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nripankadas07/morse"
Source = "https://github.com/nripankadas07/morse"
Issues = "https://github.com/nripankadas07/morse/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morse = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
files = ["src/morse"]
